11. Basic support for configurable stream/category icons. (KDE only)
12. Add track organiser dialog - so that files/folders can be renamed to match
    library/device scheme. (KDE only)
13. Unmaximise window when using compact interface.
14. When using local UNIX domain socket, allow playback of non database files.
    (This local UNIX only restriction comes from MPD)
15. Use KMessageWidget to show errors - copy of KDE code taken for pre KDE4.7 and
    Qt only builds.
16. Fix updating of views when genre filter is changed.

0.3.0
-----
 1. Basic copy to/from device support - USB mass storage (UMS) and MTP support
    only. MTP is *very* slow. (KDE only)
 2. When refreshing library/albums, only affect parts of the model that have
    changed. (Previously the whole model was replaced).
 3. When changing name of playlist, show the original name in the line-edit.
 4. Fix adding songs with spaces in their filenames to stored playlists
 5. When we recieve an updated signal from MPD, refresh library view.
 6. When disaplying songs of various artists albums, show as 'track number -
    artist - song'
 7. German translation - thanks to Lutz Lüttke
 8. Rename 'Update Database' action to 'Refresh', as the curent view is now also
    refreshed. This cation will also completely refresh the model.
 9. When determining cache filename, replace slashes with underscores.
10. Improve playqueue handling when we have 1000s of entries.
11. Fix sidebar painting for Qt styles (cleanlooks, plastique, etc.)

0.2.1
-----
1. Updated polish translation.
2. When editing a stream category name, show the current name in the entry
   field.
3. Use KInputDialog, not QInputDiallog, for KDE build.
4. Fix memory leak in playlistsmodel.
5. Fix crash when removing items from playlist.
6. When checking for existing covers, also check AlbumArt.jpg/png

0.2.0
-----
 1. Add option to show (and sort by) year of albums in library view.
 2. Show 'Various Artists' at the top of the library view.