@@ -48,4 +48,3 @@
 
 - Sidebar
   - Allow to collapse current item
-  - Icon only mode for Large/Small sidebar?
